--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,10 +19,9 @@
             android:layout_marginTop="16dp"
             android:elevation="8dp"
             android:src="@drawable/ic_profile"
-            android:tint="?attr/colorSurface"
+            android:tint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="?attr/colorSurface" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/helloUser"
@@ -32,7 +31,7 @@
             android:elevation="8dp"
             android:text="@string/hello_indosat"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="?attr/colorSurface"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
             app:layout_constraintStart_toEndOf="@+id/profile_picture"
             app:layout_constraintTop_toTopOf="@+id/profile_picture" />
@@ -75,7 +74,8 @@
                 android:hint="@string/hint_search"
                 android:inputType="text"
                 android:padding="16dp"
-                android:textColor="?attr/colorOnSurface" />
+                android:textColor="?attr/colorOnSurface"
+                android:tint="?attr/colorOnSurface" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@color/hint_color_light"
+            android:background="?attr/colorSurface"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
