--- a/app/src/main/res/layout/item_row_parameter.xml
+++ b/app/src/main/res/layout/item_row_parameter.xml
@@ -63,6 +63,7 @@
             android:focusable="false"
             android:textAlignment="center"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             app:cornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_image_parameter"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.65" />
+            app:layout_constraintGuide_begin="259dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
