--- a/app/src/main/res/layout/item_row_parameter.xml
+++ b/app/src/main/res/layout/item_row_parameter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -63,8 +63,8 @@
             android:focusable="false"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textColor="@color/white"
             app:cornerRadius="16dp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/iv_image_parameter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="259dp" />
+            app:layout_constraintGuide_percent="0.65" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
